# rubiks-cube

./: CMakeLists.txt  README.md  input.txt  main.cpp
include/: Algorithm.h  Blindsolving.h  Colour.h  CornerLocation.h  CornerPiece.h  Cube.h  CubeOrientation.h  CubeRotation.h  EdgeLocation.h  EdgePiece.h  Face.h  Move.h  PLL.h  Permutation.h  RotationAmount.h  RotationAxis.h  Slice.h  Turn.h
include/blindsolving/: Blindsolving.h  BlindsolvingMove.h  BlindsolvingReconstruction.h  CornerCycleSequenceIterator.h  CycleSequenceIterator.h  EdgeCycleSequenceIterator.h  Lettering.h  Reconstruction.h  ReconstructionIterator.h  SolveData.h
include/core/: Algorithm.h  Colour.h  CornerLocation.h  CornerPiece.h  CornerRotationAmount.h  Cube.h  CubeOrientation.h  CubeRotation.h  EdgeLocation.h  EdgePiece.h  Face.h  Move.h  PLL.h  RotationAmount.h  RotationAxis.h  Slice.h  SliceTurn.h  Turn.h  TurnSets.h  WideTurn.h
include/solvers/: DominoReductionSolver.h  EdgeOrientationSolver.h  HalfTurnReductionSolver.h  SolverUtils.h  ThistlethwaiteSolver.h
include/tests/blindsolving/: TestBlindsolvingMoveHash.h  TestCornerCycleSequenceIterator.h  TestEdgeCycleSequenceIterator.h  TestReconstructionIterator.h
include/tests/core/: TestAlgorithm.h  TestCube.h  TestCubeOrientation.h  TestPLLs.h
include/tests/solvers/: TestDominoReductionSolver.h  TestEdgeOrientationSolver.h  TestHalfTurnReductionSolver.h  TestThistlethwaiteSolver.h
include/tests/utility/: TestBidirectionalStaticVector.h  TestCombination.h  TestPackedBitsArray.h  TestPermutation.h  TestUint24Array.h
include/utility/: BidirectionalStaticVector.h  Combination.h  ConstexprBimap.h  ConstexprSharedPtr.h  ConstexprUniquePtr.h  HeapArray.h  MathUtils.h  PackedBitsArray.h  Permutation.h  RandomUtils.h  ScopedTimer.h  SolveAttemptParsingUtils.h  StaticVector.h  Uint24Array.h  Utils.h  constexpr_unique_ptr.h  heap_array.h
src/: Algorithm.cpp  Blindsolving.cpp  Colour.cpp  CornerPiece.cpp  Cube.cpp  CubeOrientation.cpp  CubeRotation.cpp  EdgePiece.cpp  Face.cpp  RotationAmount.cpp  RotationAxis.cpp  Slice.cpp  Turn.cpp
src/blindsolving/: Blindsolving.cpp  BlindsolvingMove.cpp  BlindsolvingReconstruction.cpp  CornerCycleSequenceIterator.cpp  EdgeCycleSequenceIterator.cpp  Lettering.cpp  Reconstruction.cpp  ReconstructionIterator.cpp  SolveData.cpp
src/core/: Algorithm.cpp  Colour.cpp  CornerLocation.cpp  CornerPiece.cpp  CornerRotationAmount.cpp  Cube.cpp  CubeOrientation.cpp  CubeRotation.cpp  EdgeLocation.cpp  EdgePiece.cpp  Face.cpp  Move.cpp  RotationAmount.cpp  RotationAxis.cpp  Slice.cpp  SliceTurn.cpp  Turn.cpp  WideTurn.cpp
src/solvers/: DominoReductionSolver.cpp  EdgeOrientationSolver.cpp  HalfTurnReductionSolver.cpp  ThistlethwaiteSolver.cpp
src/tests/: RunTests.cpp
src/tests/blindsolving/: TestBlindsolvingMoveHash.cpp  TestCornerCycleSequenceIterator.cpp  TestEdgeCycleSequenceIterator.cpp  TestReconstructionIterator.cpp
src/tests/core/: TestAlgorithm.cpp  TestCube.cpp  TestCubeOrientation.cpp  TestPLLs.cpp
src/tests/solvers/: TestDominoReductionSolver.cpp  TestEdgeOrientationSolver.cpp  TestHalfTurnReductionSolver.cpp  TestThistlethwaiteSolver.cpp
src/tests/utility/: TestBidirectionalStaticVector.cpp  TestCombination.cpp  TestPackedBitsArray.cpp  TestPermutation.cpp  TestUint24Array.cpp
src/utility/: SolveAttemptParsingUtils.cpp
tests/: blindsolve1.txt  blindsolve1_scramble.txt  blindsolve1_solve.txt  blindsolve2.txt  blindsolve3.txt  blindsolve4.txt  no_rotations.txt
tests/blindsolving/: TestBlindsolvingMoveHash.h  TestCornerCycleSequenceIterator.h  TestEdgeCycleSequenceIterator.h  TestReconstructionIterator.h
tests/core/: TestPLLs.h
tests/solvers/: TestEdgeOrientationSolver.h
